--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,10 @@
-<h1>Home</h1>
+<main>
+    <h1>Home</h1>
+
+    {{#each books}}
+        <div class="book">
+            <h3>Titulo: {{this.name}}</h3>
+            <p>Quantidade de páginas: {{this.pageqty}}</p>
+        </div>
+    {{/each}}
+</main>
