--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -3,7 +3,7 @@
 <form action="/register/save" method="POST">
     <div>
         <label for="title">Titulo:</label>
-        <input type="text" name="title" placeholder="Digite o titulo" id="title">
+        <input type="text" name="name" placeholder="Digite o titulo" id="title">
     </div>
     <div>
         <label for="pageqty">Número de páginas:</label>
