--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,7 +5,12 @@
         <div class="book">
             <h3>Titulo: {{this.name}}</h3>
             <p>Quantidade de páginas: {{this.pageqty}}</p>
-            <a href="/book/{{this.id}}">Ver mais</a>
+            
+            <div class="buttons">
+                <a href="/book/{{this.id}}" class="mais">Ver mais</a>
+                <a href="/edit/{{this.id}}" class="editar">Editar</a>
+            </div>
+
         </div>
     {{/each}}
 </main>
