--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,12 +45,15 @@ main > h2{
     margin-top: 0.5rem ;
     display: flex;
     gap: 1rem;
-    padding: 0.5rem;
-    border-radius: 0.5rem ;
+    
 }
-.buttons a {
+.buttons a,
+.buttons button {
   display: block;  
   text-decoration: none;
+  padding: 0.5rem;
+  border-radius: 0.5rem ;
+  font-size: 1rem;
 }
 .buttons .mais{
     border: 1px solid #007bff ;
@@ -69,5 +72,15 @@ main > h2{
 }
 .buttons .editar:hover{
     background: white;
-    color: ffc107;
+    color: #ffc107;
+}
+.buttons .excluir {
+    border: 1px solid #dc3545 ;
+    background: #dc3545;
+    color: white;
+}
+.buttons .excluir:hover{
+    background: white;
+    color: #dc3545;
+    cursor: pointer;
 }
